@@ -1,4 +1,4 @@
-Copyright (c) 2014-2017, Andrzej Kapanowski
+Copyright (c) 2014-2021, Andrzej Kapanowski
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without 
